# tensorflow-libras

./: README.md  create-policy.txt  deploy.txt  deploy_direct.py  deploy_sagemaker.py  get_model_uri.py  main.py  mainv2.py  pyproject.toml  register_model.py  serve.sh  test_endpoint.py  test_mlflow_server.py
mlflow_data/: mlflow.db
mlflow_data/artifacts/1/058adb21584d440cb1a8e36703f970e3/artifacts/: model_summary.txt
mlflow_data/artifacts/1/058adb21584d440cb1a8e36703f970e3/artifacts/model/: MLmodel  conda.yaml  requirements.txt
