[tool.poetry]
name = "tensorflow-libras"
version = "0.1.0"
description = ""
authors = ["Allan Ferreira <ferrerallan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.19.0"
tensorflow = "^2.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
